src/test/resources/templates/invalid/too-few-template-args.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test[Int]());
    
  }
}

class Test[T1, T2] { }
